# Remote-MNIST-Classification

./: CMakeLists.txt  Dockerfile  README.md  app.cpp  build.sh  configure.sh  model.pth  model_trace.pt  prereqs.sh  test.sh  tracing.py
tests/: test_main_and_save_model.py  test_neural_network.py  test_training_and_testing.py
